<resources>
    <string name="app_name">MyApplication</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello User</string>
    <string name="text_title">User Database</string>
    <string name="equitrend">EquiTrend</string>
    <string name="welcome">Welcomes You!</string>
    <string name="submit">Submit</string>
    <string name="changePass">Change Your Password</string>
    <string name="gender">Gender</string>
    <string name="paddock">Paddock</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="dam">Dam</string>
    <string name="sire">Sire</string>
    <string name="toProfiles">Access Profiles</string>
    <string name="text_title2">Profile Database</string>
    <string name="add_new_profile">Add new profile</string>
    <string name="horse_profiles">Horse Profiles</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="weighing">weighing</string>
    <string name="text_profiles">All Profiles</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="text_equine_database">List of profiles added to date and relevant data.</string>
    <string name="delete_profile">Delete Profile</string>

    <string-array name="menu">
        <item>Settings</item>
        <item>Logout</item>
        <item>Edit Details</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
