<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.cathy.myapplication.activities.RegisterActivity">

    <TextView
        android:id="@+id/profileHeader"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/equitrend"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonRegister"
        android:layout_width="138dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appCompatTextViewLoginLink"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/already_a_member_login"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="371dp"
        android:layout_height="275dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="332dp"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/textInputEditTextConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/hint_confirm_password" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInputEditTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hint_password" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                tools:textColor="@color/inputColorText" />
        </android.support.design.widget.TextInputLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>