<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/colorBackground">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title2"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_equine_database" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="10dp"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:text="@string/text_profiles"
        android:textSize="20sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewProfiles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" />

</LinearLayout>